Added momentjs for date formating, added blog save promise function, fixed blog model and api for correct saving.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -84,3 +84,5 @@ html(ng-app='myApp')
     script(type="text/javascript" src='/javascripts/vendor/angular-ui-router/release/angular-ui-router.min.js')
     script(type="text/javascript" src='/javascripts/vendor/angular-bootstrap/ui-bootstrap-tpls.js')
     script(type="text/javascript" src='/dist/javascripts/indexFinal.min.js')
+    script(type="text/javascript" src='/javascripts/vendor/moment/moment.js')
+    script(type="text/javascript" src='/javascripts/vendor/angular-moment/angular-moment.js')
