--- a/views/partials/adminLayout.jade
+++ b/views/partials/adminLayout.jade
@@ -12,10 +12,8 @@ div(style='margin-top: 25px;').wideContainer
           div(flex='25' style='border-bottom: 1px solid black')
             p Written by: {{ blog.author }}
           div(flex='25' style='border-bottom: 1px solid black')
-            p Written on: {{ blog.date }}
-          div(flex='25' layout='row' )
-            h3 Actions:
-            md-button.md-raised Delete
-            md-button.md-raised Edit
-            md-button.md-raised View
-
+            p Written on: {{ blog.date | amDateFormat: 'dddd, MMMM Do YYYY' }}
+          div(flex='25' layout='row' style='margin: auto;')
+            md-button.md-raised(ng-click='deletePost(blog._id)') Delete
+            md-button.md-raised(ui-sref='blogEdit({id: blog._id})') Edit
+            md-button.md-raised(ui-sref='blogView({id: blog._id})') View
