Fixed angular loading with ngCloak

--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -4,6 +4,8 @@ html, body
   width: 100%
   overflow: hidden
 
+ng\:cloak, ng-cloak, data-ng-cloak, x-ng-cloak, .ng-cloak, .x-ng-cloak
+  display: none !important
 
 hr
   border-bottom: 1px solid #ba68c8
@@ -182,5 +184,3 @@ hr
 /* ------------ Footer ------------- */
 
 footer
-
-
