--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,11 +6,11 @@ html(ng-app='myApp')
     meta(name='description', content='')
     meta(name='viewport', content="initial-scale=1, maximum-scale=1, user-scalable=no")
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic')
-    link(rel='stylesheet', href='https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc7/angular-material.min.css')
+    link(rel='stylesheet', href='javascripts/vendor/angular-material/angular-material.css')
     link(rel='stylesheet', href='/javascripts/vendor/hover/css/hover.css')
     link(rel='stylesheet', href='/dist/stylesheets/main.min.css')
     base(href='/')
-  body(layout='column')
+  body.ng-cloak(layout='column')
     md-content#mainContainer
       div(layout='row')
         md-sidenav.md-sidenav-left.md-whiteframe-z2(md-component-id='left', layout='column' hide-gt-lg)
@@ -86,3 +86,4 @@ html(ng-app='myApp')
     script(type="text/javascript" src='/dist/javascripts/indexFinal.min.js')
     script(type="text/javascript" src='/javascripts/vendor/moment/moment.js')
     script(type="text/javascript" src='/javascripts/vendor/angular-moment/angular-moment.js')
+    script(type="text/javascript" src="/javascripts/vendor/angular-css/angular-css.min.js")
